@@ -1,3 +1,9 @@
+2010-09-09  Nick Clifton  <nickc@redhat.com>
+
+	PR gas/11972
+	* config/tc-arm.c (parse_big_immediate): Allow for bignums being
+	extended to the size of a .octa.
+
 2010-09-08  Julian Brown  <julian@codesourcery.com>
 
 	* config/tc-arm.c (create_neon_reg_alias): Deal with case
